# rust-training

./: .gitignore  Cargo.toml
src/: main.rs
