[package]
name = "rust-training"
version = "0.1.0"
authors = ["Evan Horne <evan.horne@swift-nav.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbp = { git = "https://github.com/swift-nav/libsbp.git" }
plotters = "^0.3.0"